# rust-os

boot/: Cargo.toml  install.sh
boot/src/: allocator.rs  main.rs
kern/: Cargo.toml  Makefile  debug.sh  install.sh  qemu.sh  transmit.sh
kern/.cargo/: config
kern/src/: allocator.rs  console.rs  fs.rs  init.rs  main.rs  param.rs  process.rs  shell.rs  traps.rs  vm.rs
kern/src/allocator/: bin.rs  bump.rs  util.rs
kern/src/fs/: fd.rs  mount_map.rs  sd.rs
kern/src/init/: error_art.txt  panic.rs  vectors.s
kern/src/process/: process.rs  scheduler.rs
kern/src/traps/: frame.rs  irq.rs  syndrome.rs  syscall.rs
kern/src/vm/: pagetable.rs
lib/aarch64/src/: asm.rs
lib/aes128/: Cargo.toml
lib/aes128/src/: aes128.rs  edevice.rs  lib.rs
lib/blockdev/: Cargo.toml
lib/blockdev/src/: lib.rs  mount.rs
lib/editor/: Cargo.toml  READ.ME  test.txt
lib/editor/src/: document.rs  editor.rs  main.rs  row.rs  terminal.rs
lib/fat32/: Cargo.toml  reset_tests.sh
lib/fat32/src/: lib.rs  mbr.rs  tests.rs
lib/fat32/src/traits/: dummy.rs  fs.rs  mod.rs
lib/fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  error.rs  fat.rs  file.rs  metadata.rs  mod.rs  vfat.rs
lib/kernel_api/src/: lib.rs  syscall.rs  syscall_macros.rs
lib/liballoc/: Cargo.toml
lib/liballoc/src/: bin.rs  bump.rs  lib.rs  traits.rs
lib/pi/src/: gpio.rs  interrupt.rs  timer.rs  uart.rs
lib/sd/: Cargo.toml
lib/sd/src/: lib.rs  sd.rs
lib/stack-vec/src/: lib.rs
lib/ttywrite/: Cargo.toml  input  output  test.sh
lib/ttywrite/src/: main.rs
lib/xmodem/src/: lib.rs
user/: build.sh  progs_to_sd.sh
user/cat/: Cargo.toml
user/echo/: Cargo.toml
user/ls/: Cargo.toml
user/lsblk/: Cargo.toml
user/mkdir/: Cargo.toml
user/mount/: Cargo.toml
user/rm/: Cargo.toml
user/shell/: Cargo.toml
user/su/: Cargo.toml
user/touch/: Cargo.toml
user/umount/: Cargo.toml
(+122 files in other folders)
