[package]
name = "boot"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = true

[dependencies]
pi = { path = "../lib/pi/" }
shim = { path = "../lib/shim", features = ["alloc"] }
xmodem = { path = "../lib/xmodem", features = ["no_std"] }
fat32 = { path = "../lib/fat32", features = ["no_std"] }
blockdev = { path = "../lib/blockdev", features = ["no_std"] }
liballoc = { path = "../lib/liballoc" }
sd = { path = "../lib/sd" }
