[package]
name = "blockdev"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>",
    "Eric Frankel <eric.frankel@gatech.edu>"
]
edition = "2018"

[dependencies]
shim = { path = "../shim", features = ["alloc"] }
hashbrown = "0.6.3"

[features]
no_std = ["shim/no_std"]
