[package]
name = "fat32"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
shim = { path = "../shim", features = ["alloc"] }
blockdev = { path = "../blockdev", features = ["no_std"] }
aes128 = { path = "../aes128", features = ["no_std"] }
kernel_api = { path = "../kernel_api", features = ["user-space"] }
hashbrown = "0.6.3"

[dev-dependencies]
rand = "0.4"

[features]
no_std = ["shim/no_std"]
